# mssql_to_cassandra

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
config/: cassandra_config.yaml  mssql_config.yaml  spark_config.yaml
data/sample/: customers.csv  order_details.csv  orders.csv  products.csv
docs/: ARCHITECTURE.md  OPTIMIZATION_GUIDE.md
scripts/: download_jars.sh  generate_sample_data.py
scripts/load_mssql/: load_data.py
scripts/migrate_to_cassandra/: migrate_data.py
src/: __init__.py
src/connectors/: __init__.py  cassandra_connector.py  mssql_connector.py
src/utils/: __init__.py  config_loader.py  logger.py
tests/: test_config_loader.py
